Font style ,align item page2&3 correction

--- a/style.css
+++ b/style.css
@@ -196,6 +196,8 @@ a {
 }
 
 .page2 {
+  display: flex;
+    align-items: center;
   padding: 3vw 6vw;
   min-height: 100vh;
   width: 100%;
@@ -239,6 +241,8 @@ a {
 
 
 .page3 {
+  display: flex;
+  align-items: center;
   padding: 3vw 6vw;
   min-height: 100vh;
   width: 100%;
